--- a/assets/scss/_temp/_cytemp.scss
+++ b/assets/scss/_temp/_cytemp.scss
@@ -19,13 +19,20 @@
 }
 
 
-
 /* Video Masthead Classes */
 
+:root {
+    --full-masthead-height: 56.25vw;
+
+  @media (min-aspect-ratio: 1/1) {
+    --full-masthead-height: 100vh;
+  }
+}
+
 .masthead-video-background {
-  overflow: hidden;
-  width: 100vw;
-  height: 100vh;
+//  overflow: hidden;
+//  width: 100vw;
+//  height: 100vh;
 }
 .masthead-video-background iframe {
   position: absolute;
@@ -33,6 +40,8 @@
   left: 50%;
   width: 100vw;
   height: 100vh;
+  height: var(--full-masthead-height);
+
   transform: translate(-50%, -50%);
 }
 @media (min-aspect-ratio: 16/9) {
@@ -47,6 +56,21 @@
     width: 177.78vh;
   }
 }
+
+:root {
+//  --full-masthead-height: 80vw;
+}
+
+.sec-fixedCenteredTitleMasthead .section-title-container,
+.sec-fixedCenteredTitleMasthead .section-bg-image-container {
+  height: var(--full-masthead-height);
+}
+.masthead-video-background {
+  overflow: hidden;
+  width: 100vw;
+  height: var(--full-masthead-height);
+}
+
 
 
 /* Admission News Carousel */
